# GameOfLife

./: .gitignore  .gitmodules  CMakeLists.txt  GameOfLife.vxm  README.md
Assets/Scenes/: MainScene.vxm
Systems/: CameraControllerSystem.vxm  GameOfLifeSystem.vxm
include/: CameraController.hpp  GameOfLifeComponent.hpp  GameOfLifeSystem.hpp
src/: CameraController.cpp  GameOfLifeComponent.cpp  GameOfLifeSystem.cpp
